github_data_collector/src/data/issue_comment/rasa_vmware-tools-patches.txt
Hello there,

For [recent VMWare Tools](https://kb.vmware.com/s/article/60262), fuse utilities are needed for vmhgfs, so the [`setup.sh`](https://github.com/rasa/vmware-tools-patches/blob/master/setup.sh) file should also install [`fuse`](https://pkgs.org/download/fuse) prior to any next step.

Cheers.
|  | version|
| --- | ---|
|VMwareTools|10.2.5-8068393|
|os|centos7 |
|header|5.0.3-1.el7.elrepo.x86_64|
```
Using kernel build system.
make: Entering directory `/tmp/modconfig-vQUDB2/vmhgfs-only'
/bin/make -C /lib/modules/5.0.3-1.el7.elrepo.x86_64/build/include/.. SUBDIRS=$PWD SRCROOT=$PWD/. \
  MODULEBUILDDIR= modules
make[1]: Entering directory `/usr/src/kernels/5.0.3-1.el7.elrepo.x86_64'
Makefile:189: ================= WARNING ================
Makefile:190: 'SUBDIRS' will be removed after Linux 5.3
Makefile:191: Please use 'M=' or 'KBUILD_EXTMOD' instead
Makefile:192: ==========================================
  CC [M]  /tmp/modconfig-vQUDB2/vmhgfs-only/message.o
  CC [M]  /tmp/modconfig-vQUDB2/vmhgfs-only/dir.o
/tmp/modconfig-vQUDB2/vmhgfs-only/dir.c: In function ‘HgfsDirLlseek’:
/tmp/modconfig-vQUDB2/vmhgfs-only/dir.c:717:16: error: ‘struct inode’ has no member named ‘i_mutex’
    mtx = &inode->i_mutex;
                ^
make[2]: *** [/tmp/modconfig-vQUDB2/vmhgfs-only/dir.o] Error 1
make[1]: *** [_module_/tmp/modconfig-vQUDB2/vmhgfs-only] Error 2
make[1]: Leaving directory `/usr/src/kernels/5.0.3-1.el7.elrepo.x86_64'
make: *** [vmhgfs.ko] Error 2
make: Leaving directory `/tmp/modconfig-vQUDB2/vmhgfs-only'
```
Windows is not supported ? 
is there a release version ?
It'd be nice to get some information in the readme about choosing between vmware-tools-patches and open-vm-tools.

Thanks!
I was installed VMware Tools is VMwareTools-9.6.2-1688356.tar.gz , there nothing error to show, but I found the share folders have not to mount in the system.  The vmware-hgfsclient can show my folders, What's the situation?

```
[root@centos ~]# cat /etc/redhat-release 
CentOS Linux release 7.3.1611 (Core) 
[root@centos ~]# uname -a
Linux centos 3.10.0-514.6.2.el7.x86_64 #1 SMP Thu Feb 23 03:04:39 UTC 2017 x86_64 x86_64 x86_64 GNU/Linux
[root@centos ~]# vmware-hgfsclient 
project
repo
```
Quoting error:
""""
make: Entering directory `/tmp/modconfig-N7GfMB/vmhgfs-only'
/bin/make -C /lib/modules/3.10.0-514.2.2.el7.x86_64/build/include/.. SUBDIRS=$PWD SRCROOT=$PWD/. \
  MODULEBUILDDIR= modules
make[1]: Entering directory `/usr/src/kernels/3.10.0-514.2.2.el7.x86_64'
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/message.o
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/dir.o
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/rpcout.o
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/cpName.o
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/filesystem.o
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/request.o
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/stubs.o
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/hgfsUtil.o
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/link.o
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/bdhandler.o
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/transport.o
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/module.o
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/super.o
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/fsutil.o
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/cpNameLinux.o
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/file.o
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/hgfsBd.o
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/page.o
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/backdoorGcc64.o
/tmp/modconfig-N7GfMB/vmhgfs-only/backdoorGcc64.o: warning: objtool: BackdoorHbIn()+0xd: duplicate frame pointer save
/tmp/modconfig-N7GfMB/vmhgfs-only/backdoorGcc64.o: warning: objtool: BackdoorHbOut()+0xd: duplicate frame pointer save
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/backdoor.o
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/hgfsEscape.o
  CC [M]  /tmp/modconfig-N7GfMB/vmhgfs-only/inode.o
/tmp/modconfig-N7GfMB/vmhgfs-only/page.c: In function ‘HgfsWbRequestWait’:
/tmp/modconfig-N7GfMB/vmhgfs-only/page.c:1649:23: warning: passing argument 3 of ‘wait_on_bit’ makes integer from pointer without a cast [enabled by default]
                       TASK_UNINTERRUPTIBLE);
                       ^
In file included from include/linux/mmzone.h:9:0,
                 from include/linux/gfp.h:5,
                 from include/linux/mm.h:9,
                 from include/linux/pagemap.h:7,
                 from /tmp/modconfig-N7GfMB/vmhgfs-only/page.c:28:
include/linux/wait.h:1044:1: note: expected ‘unsigned int’ but argument is of type ‘int (*)(void *)’
 wait_on_bit(void *word, int bit, unsigned mode)
 ^
/tmp/modconfig-N7GfMB/vmhgfs-only/page.c:1649:23: error: too many arguments to function ‘wait_on_bit’
                       TASK_UNINTERRUPTIBLE);
                       ^
In file included from include/linux/mmzone.h:9:0,
                 from include/linux/gfp.h:5,
                 from include/linux/mm.h:9,
                 from include/linux/pagemap.h:7,
                 from /tmp/modconfig-N7GfMB/vmhgfs-only/page.c:28:
include/linux/wait.h:1044:1: note: declared here
 wait_on_bit(void *word, int bit, unsigned mode)
 ^
make[2]: *** [/tmp/modconfig-N7GfMB/vmhgfs-only/page.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [_module_/tmp/modconfig-N7GfMB/vmhgfs-only] Error 2
make[1]: Leaving directory `/usr/src/kernels/3.10.0-514.2.2.el7.x86_64'
make: *** [vmhgfs.ko] Error 2
make: Leaving directory `/tmp/modconfig-N7GfMB/vmhgfs-only'

The filesystem driver (vmhgfs module) is used only for the shared folder 
feature. The rest of the software provided by VMware Tools is designed to work 
independently of this feature.

If you wish to have the shared folders feature, you can install the driver by 
running vmware-config-tools.pl again after making sure that gcc, binutils, make
and the kernel sources for your running kernel are installed on your machine. 
These packages are available on your distribution's installation CD.
[ Press Enter key to continue ] 
""""

Any help or suggest is grateful.


It's a minor issue since Fedora will still accept the `yum` command and redirect to `/usr/bin/dnf install`, but it would still be nice.
I wanted to have Unity support , so I need to use VMware Workstation 11, but I've encountered two issues related to unity and shared folders during the installation.

First of all, the default installation `vmware-tools-patches simply` installed the newest vmware-tools, so unfortunately no unity support and the one supplied with VMware workstation 11 (9.9.5) could not build `vmhgfs` correctly, so unity works fine, but no shared folders.

To solve `vmhgfs` compilation issue:

1. I had to revert to `554ac76733235e51c58a2a2edda8ea1ac1dc5a3f` commit, because with the last commit, `patch.sh` simply skips the patch for 4.7+ kernels for vmhgfs
2. then `patch.sh` successfully applied `20-vmhgfs-inode_unlock+linkops+cache_macro_cleanup-4.7.patch`
3. `compile.sh` correctly buildt and installed everything, except `vmhgfs` module could not be loaded, so shared folders still did not work.

However, because in newer kernels legacy `vmhgfs` is not needed anymore I simply downloaded and installed the newest version (`download-tools.sh latest`), the one without Unity support, then copied 

```
cp /usr/bin/vmhgfs-fuse ~/
cp /usr/lib/vmware-tools/lib32/libvmhgfs-fuse.so/libvmhgfs-fuse.so ~/libvmhgfs-fuse.so.32
cp /usr/lib/vmware-tools/lib64/libvmhgfs-fuse.so/libvmhgfs-fuse.so ~/libvmhgfs-fuse.so.64
```

Re-installed the version with unity support, the one supplied with VMware 11 (9.9.5), which duriing uninstall removed fuse-related stuff and then I moved copied files to the same locations.

Now both unity and shared folders works fine. If there is anyone who can make it more elegant, do no hesitate to answer here.

Hello
how we can support symlink in shared folder?
i get always permission error 
using Ubuntu 16.04
Karnel version 4.7
On Ubuntu 16.04.1 with the latest updates.  I can chown /mnt/hgfs/share to a different group.  But after about 5 seconds it reverts back to root:root.  Literally 24 hour ago the group would stick.  There were no changes to the system.  I've tried this on 3 ubuntu VM's...all show the same issue.
